# sumtype

./: Cargo.toml  README.md  lib.rs
macro/: Cargo.toml  lib.rs  sumtrait_internal.rs
tests/: bug.rs  large.rs  multi.rs  read.rs  sumtrait.rs  test.rs  test_gparams.rs  test_mod.rs
