[package]
name = "sumtype"
description = "Generate zerocost sumtype of iterators or closures"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
version = "0.2.0"
repository = "https://github.com/yasuo-ozu/sumtype"
edition = "2021"
keywords = ["macros", "zerocost", "enum", "union-type", "iterator"]
categories = ["data-structures", "no-std::no-alloc", "rust-patterns"]
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
sumtype-macro = { path = "macro", version = "0.2.0" }

[workspace]

members = [
	".",
	"macro",
]

resolver = "2"
